added eloquent ruby paragraphs

--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -10,9 +10,35 @@
     <h1>
         Eloquent Ruby Book Review
     </h1>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+
+            <li>
+                <a href="#book2">Book 2</a>
+            </li>
+
+            <li>
+                <a href="#book3">Book 3</a>
+            </li>
+
+            <li>
+                <a href="#book4">Book 4</a>
+            </li>
+
+            <li>
+                <a href="#book5">Book 5</a>
+            </li>
+        </ul>
+    </nav>
+
     <section>
         <img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby">
     </section>
+
     <section>
         <br>
         Author:  Russ Olsen
@@ -34,8 +60,27 @@
         ISBN: 860-1300202396
     </section>
 
+    <section>
+        <br>
+        <h2>
+            Description:
+        </h2>
+        <p>
+            
+            It's easy to write correct Ruby code, but to gain the fluency needed to write great Ruby code, you must go beyond syntax and absorb the Ruby way of thinking and problem solving. In Eloquent Ruby, Russ Olsen helps you write Ruby like true Rubyists do so you can leverage its immense, surprising power. Olsen draws on years of experience internalizing the Ruby culture and teaching Ruby to other programmers. He guides you to the Ah Ha! moments when it suddenly becomes clear why Ruby works the way it does, and how you can take advantage of this language s elegance and expressiveness. 
+        </p>
+
+            Eloquent Ruby starts small, answering tactical questions focused on a single statement, method, test, or bug. You ll learn how to write code that actually looks like Ruby (not Java or C#); why Ruby has so many control structures; how to use strings, expressions, and symbols; and what dynamic typing is really good for. Next, the book addresses bigger questions related to building methods and classes. 
+
+        <p>
+            You'll discover why Ruby classes contain so many tiny methods, when to use operator overloading, and when to avoid it. Olsen explains how to write Ruby code that writes its own code and why you ll want to. He concludes with powerful project-level features and techniques ranging from gems to Domain Specific Languages. A part of the renowned Addison-Wesley Professional Ruby Series, Eloquent Ruby will help you put on your Ruby-colored glasses and get results that make you a true believer."
+        </p>
+    </section>
+
     <footer>
-        
+        <p>
+            © 2022 Esther Annorzie
+        </p>
     </footer>
 </body>
 </html>
