--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
     <nav>
         <ul>
             <li>
-                <a href="#home">Home</a>
-            </li>
-
-            <li>
                 <a href="eloquent-ruby.html">Eloquent Ruby Book Review</a>
             </li>
 
             <li>
-                <a href="#book2">Book2</a>
+                <a href="#book2">Book 2</a>
             </li>
 
             <li>
@@ -26,15 +22,24 @@
             </li>
 
             <li>
-                <a href="#book3">Book 4</a>
+                <a href="#book4">Book 4</a>
             </li>
 
             <li>
-                <a href="#book3">Book 5</a>
+                <a href="#book5">Book 5</a>
+            </li>
+
+            <li>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
     </nav>
+    
     <section>
+        <h1>
+            Top 5 Books
+        </h1>
+        
         <ul>
             <li>
                 <a href="https://www.goodreads.com/book/show/14438307-clean-ruby">
@@ -72,5 +77,12 @@
             </li> 
         </ul>
     </section>
+
+    <footer>
+        <p>
+            © 2022 Esther Annorzie
+        </p>
+    </footer>
+
 </body>
 </html>
