added social media links & images

--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <img src="images/site-maintainer.png" alt="The site maintainer">
+<p>
+    Your feedback is appreciated. Visit us on our social media.
+    <br>
+    <a href="https://www.facebook.com">
+        <img src="images/logo-facebook.png" alt="Facebook logo">
+    </a>
+
+    <a href="https://www.twitter.com">
+        <img src="images/logo-twitter.png" alt="Twitter logo">
+    </a>
+</p>
 </body>
 </html>
