added books pages and navigation

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,38 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+
+            <li>
+                <a href="eloquent-ruby.html">Eloquent Ruby Book Review</a>
+            </li>
+
+            <li>
+                <a href="#book2">Book 2</a>
+            </li>
+
+            <li>
+                <a href="#book3">Book 3</a>
+            </li>
+
+            <li>
+                <a href="#book4">Book 4</a>
+            </li>
+
+            <li>
+                <a href="#book5">Book 5</a>
+            </li>
+
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
     <img src="images/site-maintainer.png" alt="The site maintainer">
 <p>
     Your feedback is appreciated. Visit us on our social media.
