--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -14,23 +14,27 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html">Home</a>
+                <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book2">Book 2</a>
+                <a href="confident-ruby.html">Confident Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book3">Book 3</a>
+                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book4">Book 4</a>
+                <a href="ruby-science.html">Ruby Science Review</a>
             </li>
 
             <li>
-                <a href="#book5">Book 5</a>
+                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
+            </li>
+
+            <li>
+                <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
@@ -79,6 +83,7 @@
     </section>
 
     <section>
+        <article>
         <h3>
             Review #1 Title:  The first Ruby book I read in full within 24 hours
         </h3>
@@ -112,6 +117,8 @@
         </p>
 
         <br>
+    </article>
+    <article>
         <h3>
             Review #2 Title:  Eloquent Olsen
         </h3>
@@ -142,6 +149,7 @@
         <p>
             Russ Olsen has helped me to gain more experience points in Ruby, and I must say that I am excited to learn more. If you too wish to learn more about Ruby, then you would be hard-pressed to find a better book than "Eloquent Ruby" in helping you to do so.
         </p>
+    </article>
     </section>
 
     <footer>
