--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <nav>
         <ul>
             <li>
-                <a href="eloquent-ruby.html">Eloquent Ruby Book Review</a>
+                <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book2">Book 2</a>
+                <a href="confident-ruby.html">Confident Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book3">Book 3</a>
+                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book4">Book 4</a>
+                <a href="ruby-science.html">Ruby Science Review</a>
             </li>
 
             <li>
-                <a href="#book5">Book 5</a>
+                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
             </li>
 
             <li>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
