added home page link to all pages

--- a/clean-ruby.html
+++ b/clean-ruby.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            
+            <li>
+                <a href="clean-ruby.html">Clean Ruby Review</a>
+            </li>
+
+            <li>
+                <a href="confident-ruby.html">Confident Ruby Review</a>
+            </li>
+
+            <li>
+                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
+            </li>
+
+            <li>
+                <a href="ruby-science.html">Ruby Science Review</a>
+            </li>
+
+            <li>
+                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
+            </li>
+
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
