--- a/contact.html
+++ b/contact.html
@@ -12,25 +12,25 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
-
+            
             <li>
-                <a href="eloquent-ruby.html">Eloquent Ruby Book Review</a>
+                <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book2">Book 2</a>
+                <a href="confident-ruby.html">Confident Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book3">Book 3</a>
+                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
             </li>
 
             <li>
-                <a href="#book4">Book 4</a>
+                <a href="ruby-science.html">Ruby Science Review</a>
             </li>
 
             <li>
-                <a href="#book5">Book 5</a>
+                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
             </li>
 
             <li>
@@ -50,6 +50,9 @@
     <a href="https://www.twitter.com">
         <img src="images/logo-twitter.png" alt="Twitter logo">
     </a>
+    <br>
+    <br>
+    <a href="mailto:extremelygoofy@goofy.com">Email: extremelygoofy@goofy.com</a>
 </p>
 </body>
 </html>
