--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -14,6 +14,10 @@
     <nav>
         <ul>
             <li>
+                <a href="index.html">Home</a>
+            </li>
+            
+            <li>
                 <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
 
@@ -45,24 +49,26 @@
     </section>
 
     <section>
-        Author:  Russ Olsen
-        <br>
-        E-mail:  <a href="mailto:russ@russolsen.com">russ@russolsen.com</a>
-        <br>
-        Twitter:  <a href="https://twitter.com/russolsen">@russolsen</a>
-        <br>
-        Website:  <a href="http://eloquentruby.com/">http://eloquentruby.com</a>
-        <br>
-        Format:  Paperback, 413 pages
-        <br>
-        Publication Date: February 21st 2011
-        <br>
-        Publisher:  Addison-Wesley Professional
-        <br>
-        Price:  $38.63
-        <br>
-        ISBN: 860-1300202396
-        <br>
+        <p>
+            Author:  Russ Olsen
+            <br>
+            E-mail:  <a href="mailto:russ@russolsen.com">russ@russolsen.com</a>
+            <br>
+            Twitter:  <a href="https://twitter.com/russolsen">@russolsen</a>
+            <br>
+            Website:  <a href="http://eloquentruby.com/">http://eloquentruby.com</a>
+            <br>
+            Format:  Paperback, 413 pages
+            <br>
+            Publication Date: February 21st 2011
+            <br>
+            Publisher:  Addison-Wesley Professional
+            <br>
+            Price:  $38.63
+            <br>
+            ISBN: 860-1300202396
+            <br>
+        </p>
     </section>
 
     <section>
@@ -149,6 +155,7 @@
         <p>
             Russ Olsen has helped me to gain more experience points in Ruby, and I must say that I am excited to learn more. If you too wish to learn more about Ruby, then you would be hard-pressed to find a better book than "Eloquent Ruby" in helping you to do so.
         </p>
+        <br>
     </article>
     </section>
 
