--- a/ruby-science.html
+++ b/ruby-science.html
@@ -10,6 +10,10 @@
     <nav>
         <ul>
             <li>
+                <a href="index.html">Home</a>
+            </li>
+            
+            <li>
                 <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
 
