--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <header>
     <nav>
         <ul>
             <li>
@@ -38,21 +39,30 @@
             </li>
         </ul>
     </nav>
-
+    </header>
+<section>
     <img src="images/site-maintainer.png" alt="The site maintainer">
-<p>
-    Your feedback is appreciated. Visit us on our social media.
-    <br>
-    <a href="https://www.facebook.com">
-        <img src="images/logo-facebook.png" alt="Facebook logo">
-    </a>
+    <p>
+        Your feedback is appreciated. Visit us on our social media.
+        <br>
+        <a href="https://www.facebook.com">
+            <img src="images/logo-facebook.png" alt="Facebook logo">
+        </a>
 
-    <a href="https://www.twitter.com">
-        <img src="images/logo-twitter.png" alt="Twitter logo">
-    </a>
-    <br>
-    <br>
-    <a href="mailto:extremelygoofy@goofy.com">Email: extremelygoofy@goofy.com</a>
-</p>
+        <a href="https://www.twitter.com">
+            <img src="images/logo-twitter.png" alt="Twitter logo">
+        </a>
+        <br>
+        <br>
+        <a href="mailto:extremelygoofy@goofy.com">Email: extremelygoofy@goofy.com</a>
+        <br>
+        <br>
+    </p>
+</section>
+<footer>
+    <p>
+        © 2022 Esther Annorzie
+    </p>
+</footer>
 </body>
 </html>
