--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -11,12 +11,13 @@
         Eloquent Ruby Book Review
     </h1>
 
+    <header>
     <nav>
         <ul>
             <li>
                 <a href="index.html">Home</a>
             </li>
-            
+
             <li>
                 <a href="clean-ruby.html">Clean Ruby Review</a>
             </li>
@@ -41,6 +42,7 @@
                 <a href="contact.html">Contact</a>
             </li>
         </ul>
+    </header>
     </nav>
 
     <section>
