--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Best Ruby Books</title>
 </head>
 <body>
+    <header>
     <nav>
         <ul>
             <li>
@@ -38,6 +39,7 @@
             </li>
         </ul>
     </nav>
+    </header>
     
     <section>
         <h1>
