--- a/ruby-science.html
+++ b/ruby-science.html
@@ -7,6 +7,7 @@
     <title>Ruby Science Review</title>
 </head>
 <body>
+    <header>
     <nav>
         <ul>
             <li>
@@ -38,5 +39,12 @@
             </li>
         </ul>
     </nav>
+    </header>
+
+    <footer>
+        <p>
+            © 2022 Esther Annorzie
+        </p>
+    </footer>
 </body>
 </html>
