moved h1s into header

--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -46,8 +46,11 @@
     </nav>
 
     <section>
-        <img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby">
-        <br>
+        <!-- <img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby">
+        <br> -->
+        <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby?from_search=true&from_srp=true&qid=Uo2rAEucE5&rank=1f">
+            <img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby">
+        </a>
     </section>
 
     <section>
