--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Ruby Books</title>
+    <link href="styles/style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <h1>
             Top 5 Books
         </h1>
+        
     <nav>
-        <ul>
+        <ul class="navbar">
             <li>
                 <a href="index.html">Home</a>
             </li>
