--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Ruby Books</title>
     <link href="styles/style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,23 +21,23 @@
             </li>
 
             <li>
-                <a href="clean-ruby.html">Clean Ruby Review</a>
+                <a href="clean-ruby.html">Clean Ruby</a>
             </li>
 
             <li>
-                <a href="confident-ruby.html">Confident Ruby Review</a>
+                <a href="confident-ruby.html">Confident Ruby</a>
             </li>
 
             <li>
-                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
+                <a href="eloquent-ruby.html">Eloquent Ruby</a>
             </li>
 
             <li>
-                <a href="ruby-science.html">Ruby Science Review</a>
+                <a href="ruby-science.html">Ruby Science</a>
             </li>
 
             <li>
-                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
+                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist</a>
             </li>
 
             <li>
