--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,13 @@
     <header>
     <nav>
         <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
 
-            <li>
-                <a href="clean-ruby.html">Clean Ruby Review</a>
-            </li>
+            <li><a href="clean-ruby.html">Clean Ruby Review</a></li>
 
-            <li>
-                <a href="confident-ruby.html">Confident Ruby Review</a>
-            </li>
+            <li><a href="confident-ruby.html">Confident Ruby Review</a></li>
 
-            <li>
-                <a href="eloquent-ruby.html">Eloquent Ruby Review</a>
-            </li>
+            <li><a href="eloquent-ruby.html">Eloquent Ruby Review</a></li>
 
             <li>
                 <a href="ruby-science.html">Ruby Science Review</a>
