--- a/index.html
+++ b/index.html
@@ -10,76 +10,51 @@
 </head>
 <body>
     <header>
-        <h1>
-            Top 5 Books
-        </h1>
-        
-    <nav>
-        <ul class="navbar">
-            <li>
-                <a href="index.html">Home</a>
-            </li>
+        <h1 class="page-title">Top 5 Books</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
 
-            <li>
-                <a href="clean-ruby.html">Clean Ruby</a>
-            </li>
+                <li><a href="clean-ruby.html">Clean Ruby</a></li>
 
-            <li>
-                <a href="confident-ruby.html">Confident Ruby</a>
-            </li>
+                <li><a href="confident-ruby.html">Confident Ruby</a></li>
 
-            <li>
-                <a href="eloquent-ruby.html">Eloquent Ruby</a>
-            </li>
+                <li><a href="eloquent-ruby.html">Eloquent Ruby</a></li>
 
-            <li>
-                <a href="ruby-science.html">Ruby Science</a>
-            </li>
+                <li><a href="ruby-science.html">Ruby Science</a></li>
 
-            <li>
-                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist</a>
-            </li>
+                <li><a href="well-grounded-rubyist.html">Well-Grounded Rubyist</a></li>
 
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    
-    <section>
-        <ul>
-            <li>
-                <a href="https://www.goodreads.com/book/show/14438307-clean-ruby">
-                    <img src="images/cover-clean_ruby.jpg" alt="Book cover for Clean Ruby">
-                </a>
-            </li> 
 
-            <li>
-                <a href="https://www.goodreads.com/book/show/15847933-confident-ruby">
-                    <img src="images/cover-confident_ruby.jpg" alt="Book cover for Confident Ruby">
-                </a>
-            </li> 
+    <main>
+        <section>
+            <ul>
+                <li>
+                    <a href="https://www.goodreads.com/book/show/14438307-clean-ruby"> <img src="images/cover-clean_ruby.jpg" alt="Book cover for Clean Ruby"></a>
+                </li> 
 
-            <li>
-                <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby?from_search=true&from_srp=true&qid=Uo2rAEucE5&rank=1f">
-                    <img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby">
-                </a>
-            </li> 
+                <li>
+                    <a href="https://www.goodreads.com/book/show/15847933-confident-ruby"> <img src="images/cover-confident_ruby.jpg" alt="Book cover for Confident Ruby"></a>
+                </li> 
 
-            <li>
-                <a href="https://www.goodreads.com/book/show/16720439-ruby-science?ac=1&from_search=true&qid=lxrMivwlmH&rank=1">
-                    <img src="images/cover-ruby_science.jpg" alt="Book cover for Ruby Science">
-                </a>
-            </li> 
+                <li>
+                    <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby?from_search=true&from_srp=true&qid=Uo2rAEucE5&rank=1f"><img src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby"></a>
+                </li> 
 
-            <li>
-                <a href="https://www.goodreads.com/book/show/3892688-the-well-grounded-rubyist?ac=1&from_search=true&qid=tgGLttHHn4&rank=1">
-                    <img src="images/cover-well_grounded_rubyist.jpg" alt="Book cover for Well Grounded Rubyist">
-                </a>
-            </li> 
-        </ul>
-    </section>
+                <li>
+                    <a href="https://www.goodreads.com/book/show/16720439-ruby-science?ac=1&from_search=true&qid=lxrMivwlmH&rank=1"><img src="images/cover-ruby_science.jpg" alt="Book cover for Ruby Science"></a>
+                </li> 
+
+                <li>
+                    <a href="https://www.goodreads.com/book/show/3892688-the-well-grounded-rubyist?ac=1&from_search=true&qid=tgGLttHHn4&rank=1"><img src="images/cover-well_grounded_rubyist.jpg" alt="Book cover for Well Grounded Rubyist"></a>
+                </li> 
+            </ul>
+        </section>
+    </main>
 
     <footer>
         <p>
