link hover color changes and h1 color change

--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="page-title">Eloquent Ruby Book Review</h1>
+        <h1 id="eloquent-ruby-title" class="page-title">Eloquent Ruby Book Review</h1>
 
         <nav>
             <ul class="navbar">
@@ -34,7 +34,7 @@
 
     <main>
         <section>
-            <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby?from_search=true&from_srp=true&qid=Uo2rAEucE5&rank=1f"><img class="center"  src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby"></a>
+            <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby?from_search=true&from_srp=true&qid=Uo2rAEucE5&rank=1f"><img id="eloquent-ruby-resize" class="center"  src="images/cover-eloquent_ruby.jpg" alt="Book cover for Eloquent Ruby"></a>
         </section>
 
         <section>
