lightgray background to reviews

--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -72,7 +72,7 @@
         </section>
 
     <section>
-        <article>
+        <article class="reviews">
         <h3>
             Review #1 Title:  The first Ruby book I read in full within 24 hours
         </h3>
@@ -96,8 +96,9 @@
 
         <p>I wholeheartedly recommend this book to anyone except those who, well, could have written a similar book themselves. The short punchy chapters make it a delight to read and gives the option of reading it merely 10 minutes at a time before bed or similar. The short chapters also make it useful as a reference if you forget how to do a certain thing like, say, use method_missing, even though it's not put together as a reference book at all. Lastly, this book is a must read if you're not confident with Ruby idioms and the best way to structure and lay out your code - Russ's approaches reinforce the current "standard" way to write Ruby and this alone is worth the price of admission.</p>
         <br>
-    </article>
-        <article>
+        </article>
+
+        <article class="reviews">
             <h3>Review #2 Title:  Eloquent Olsen</h3>
 
             <p>
@@ -121,8 +122,8 @@
             <p>The highlight of the book is of course its dénouement that succeeds in pulling together all of the lessons presented throughout the book into explaining the role that Domain-Specific Languages (DSL) serve in solving programming problems with Ruby. I can't possibly do justice in summarizing this important technique, but the punch-line is that Ruby's features foster the creation of powerful and expressive DSLs used to simplify the development of complex solutions by allowing the language itself to be molded into a form that is highly expressive to said solution! It takes a while to see the power in this technique, but "Eloquent Ruby" makes a compelling case indeed.</p>
             
             <p>Russ Olsen has helped me to gain more experience points in Ruby, and I must say that I am excited to learn more. If you too wish to learn more about Ruby, then you would be hard-pressed to find a better book than "Eloquent Ruby" in helping you to do so.</p>
-            <br>
         </article>
+        <br>
     </section>
     </main>
 
