--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -28,9 +28,9 @@
 
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-        </header>
         <br>
         </nav>
+    </header>
 
     <main>
         <section>
@@ -63,7 +63,7 @@
         <section>
             <h2>Description:</h2>
 
-            <p>It's easy to write correct Ruby code, but to gain the fluency needed to write great Ruby code, you must go beyond syntax and absorb the Ruby way of thinking and problem solving. In Eloquent Ruby, Russ Olsen helps you write Ruby like true Rubyists do so you can leverage its immense, surprising power. Olsen draws on years of experience internalizing the Ruby culture and teaching Ruby to other programmers. He guides you to the Ah Ha! moments when it suddenly becomes clear why Ruby works the way it does, and how you can take advantage of this language s elegance and expressiveness.</p>
+            <p>It's easy to write correct Ruby code, but to gain the fluency needed to write great Ruby code, you must go beyond syntax and absorb the Ruby way of thinking and problem solving. In Eloquent Ruby, Russ Olsen helps you write Ruby like true Rubyists do so you can leverage its immense, surprising power. Olsen draws on years of experience internalizing the Ruby culture and teaching Ruby to other programmers. He guides you to the Ah Ha! moments when it suddenly becomes clear why Ruby works the way it does, and how you can take advantage of this language's elegance and expressiveness.</p>
 
             <p>Eloquent Ruby starts small, answering tactical questions focused on a single statement, method, test, or bug. You'll learn how to write code that actually looks like Ruby (not Java or C#); why Ruby has so many control structures; how to use strings, expressions, and symbols; and what dynamic typing is really good for. Next, the book addresses bigger questions related to building methods and classes.</p>
 
@@ -73,9 +73,7 @@
 
     <section>
         <article class="reviews">
-        <h3>
-            Review #1 Title:  The first Ruby book I read in full within 24 hours
-        </h3>
+        <h3>Review #1 Title:  The first Ruby book I read in full within 24 hours</h3>
         <p>
             Reviewer #1:  Peter Cooper
             <br>
