added inline height to reviews and main element to contact page

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
     </nav>
     </header>
 <section>
+    <main>
     <img src="images/site-maintainer.png" alt="The site maintainer">
     <p>
         Your feedback is appreciated. Visit us on our social media.
@@ -51,6 +52,7 @@
         <br>
     </p>
 </section>
+</main>
 <footer>
     <p>
         © 2022 Esther Annorzie
