--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class="page-title">Top 5 Books</h1>
+        <h1 id="page-title-color" class="page-title">Top 5 Books</h1>
 
         <nav>
             <ul>
