--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -72,7 +72,7 @@
         </section>
 
     <section>
-        <article class="reviews">
+        <article>
         <h3>Review #1 Title:  The first Ruby book I read in full within 24 hours</h3>
         <p>
             Reviewer #1:  Peter Cooper
