--- a/contact.html
+++ b/contact.html
@@ -6,57 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
 </head>
+
 <body>
     <header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
+        <nav>
+            <h1 id="page-title-color">Contact Us</h1>
+            <ul>
+                <li><a href="index.html">Home</a></li>
 
-            <li><a href="clean-ruby.html">Clean Ruby Review</a></li>
+                <li><a href="clean-ruby.html">Clean Ruby Review</a></li>
 
-            <li><a href="confident-ruby.html">Confident Ruby Review</a></li>
+                <li><a href="confident-ruby.html">Confident Ruby Review</a></li>
 
-            <li><a href="eloquent-ruby.html">Eloquent Ruby Review</a></li>
+                <li><a href="eloquent-ruby.html">Eloquent Ruby Review</a></li>
 
-            <li>
-                <a href="ruby-science.html">Ruby Science Review</a>
-            </li>
+                <li>
+                    <a href="ruby-science.html">Ruby Science Review</a>
+                </li>
 
-            <li>
-                <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
-            </li>
+                <li>
+                    <a href="well-grounded-rubyist.html">Well-Grounded Rubyist Review</a>
+                </li>
 
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-<section>
-    <main>
-    <img src="images/site-maintainer.png" alt="The site maintainer">
-    <p>
-        Your feedback is appreciated. Visit us on our social media.
-        <br>
-        <a href="https://www.facebook.com">
-            <img src="images/logo-facebook.png" alt="Facebook logo">
-        </a>
 
-        <a href="https://www.twitter.com">
-            <img src="images/logo-twitter.png" alt="Twitter logo">
-        </a>
-        <br>
-        <br>
-        <a href="mailto:extremelygoofy@goofy.com">Email: extremelygoofy@goofy.com</a>
-        <br>
-        <br>
-    </p>
-</section>
-</main>
-<footer>
-    <p>
-        © 2022 Esther Annorzie
-    </p>
-</footer>
+    <main class="center">
+        <section>
+            <img src="images/site-maintainer.png" alt="The site maintainer">
+            <p>
+                Your feedback is appreciated. Visit us on our social media.
+                <br>
+                <a href="https://www.facebook.com"><img id="round-goofy" src="images/logo-facebook.png" alt="Facebook logo"></a>
+
+                <a href="https://www.twitter.com"><img src="images/logo-twitter.png" alt="Twitter logo"></a>
+                <br>
+                <br>
+                <a href="mailto:extremelygoofy@movie.com">Email: extremelygoofy@goofy.com</a>
+                <br>
+                <br>
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2022 Esther Annorzie</p>
+    </footer>
 </body>
 </html>
